# ollama-discord-god-rs

./: .gitignore  Cargo.toml  README.md  run.sh
.github/workflows/: rust.yml
gods/: kirby.json  marvin.json  pastafari.json  samantha.json  spagetti.json
modelfiles/: kirby.modelfile  marvin.modelfile  mavin.json  pastafari.modelfile  samantha.modelfile
src/: ai21.rs  bot_ui.rs  error.rs  god.rs  kirby.rs  main.rs  ollama.rs
src/commands/: chat.rs  clear.rs  mod.rs
