[package]
name = "god-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP library
reqwest = { version = "0.11", features = ["json"] }
# Async loops
tokio = { version = "1", features = ["full"] }
# Discord
serenity = { version = "0.11.2", default-features = false, features = [
    "builder",
    "client",
    "collector",
    "http",
    "rustls_backend",
    "model",
] }
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unescape = "0.1.0"
futures = "0.3.0"
async-trait = "0.1"
const_format = "0.2.22"
redis = { version = "0.21.*", features = ["tokio-native-tls-comp"] }
rustube = { version = "0.3.8" }
