[package]
name = "god-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP library
reqwest = { version = "0.11", features = ["json"] }
# Async loops
tokio = { version = "1", features = ["full"] }
# Discord
serenity = { version = "0.12.0", default-features = false, features = [
  "builder",
  "client",
  "collector",
  "http",
  "rustls_backend",
  "model",
] }
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unescape = "0.1"
futures = "0.3.*"
async-trait = "0.1"
const_format = "0.2.*"
once_cell = "1.*"
# ollama-rs = "0.1.*"
# 0.1.6
ollama-rs = { git = "https://github.com/AlexisTM/ollama-rs", branch = "feat/make_generation_options_deserializable" }
clap = { version = "4", features = ["derive"] }
